[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["wry", "compression"] }
tauri-plugin-deep-link = { path = "../../../" }
tauri-plugin-log = { path = "../../../../log" }
tauri-plugin-single-instance = { path = "../../../../single-instance", features = [
  "deep-link",
] }

[features]
prod = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "Source/lib.rs"

[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license-file = "LICENSE"
name = "deep-link-example"
repository = ""
rust-version = "1.77.2"
version = "0.0.0"
