[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["wry", "compression"] }
tauri-plugin-deep-link = { version = "2.2.0" }
tauri-plugin-log = { version = "2.2.1" }
tauri-plugin-single-instance = { version = "2.2.1", features = [
	"deep-link",
] }

[features]
prod = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "Source/lib.rs"

[package]
authors = ["you"]
description = "A Tauri App"
edition = "2024"
license-file = "LICENSE"
name = "deep-link-example"
repository = ""
rust-version = "1.85.0"
version = "0.0.0"
