[[bin]]
name = "single-instance-example"
path = "Source/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["wry", "compression"] }
tauri-plugin-cli = { path = "../../../../cli" }
tauri-plugin-single-instance = { path = "../../../" }

[features]
prod = ["tauri/custom-protocol"]

[package]
authors = ["You"]
description = "A Tauri App"
edition = "2024"
name = "single-instance-example"
repository = ""
rust-version = "1.85.0"
version = "0.1.0"
