workspace = {}

[package]
name = "app-updater-v1"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tauri = { version = "2", features = ["updater"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
