[[bin]]
name = "websocket-example"
path = "Source/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["wry", "compression"] }
tauri-plugin-websocket = { path = "../../../" }
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = "0.26"

[features]
prod = ["tauri/custom-protocol"]

[package]
description = "A Tauri App"
edition = "2024"
name = "websocket-example"
version = "0.1.0"
